RESOLVED 282462: [Theming] Align button width for Spinner, Combo, and DateTime (the Spinner part of the issue)

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/spinnerkit/Spinner.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/spinnerkit/Spinner.default.css
@@ -11,19 +11,20 @@ Spinner[BORDER] {
   border: 1px inset;
 }
 
+Spinner-Buttons {
+  background-color: rgb( 248, 248, 255 );
+  border: 2px outset;
+  width: 15px;
+}
+
+Spinner-Buttons:pressed {
+  border: 2px inset;
+}
+
 Spinner-UpButton {
   background-image: url( resource/widget/rap/spinner/up_button.gif );
 }
 
 Spinner-DownButton {
   background-image: url( resource/widget/rap/spinner/down_button.gif );
-}
-
-Spinner-UpButton, Spinner-DownButton {
-  background-color: rgb( 248, 248, 255 );
-  border: 2px outset;
-}
-
-Spinner-UpButton:pressed, Spinner-DownButton:pressed {
-  border: 2px inset;
 }
